Fixed services section on home page so icons would be in two columns on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,7 @@ footer i {
 	marign: 0;
 }
 
-#services .full-width {
+.services-wrapper {
 	justify-content: space-around;
 	align-items:  flex-start;
 	flex-flow:  row wrap;
@@ -413,11 +413,15 @@ footer i {
 
 	/** Services **/
 
-	#services .half-width {
+	/* #services .half-width {
 	flex-basis:  45%;
+	}  */
+
+	.service {
+		width: 45%;
 	}
 
-	#services .full-width {
+	.services-wrapper {
 		justify-content: space-around;
 		width:  90%;
 	}
@@ -481,7 +485,7 @@ h1 {
 
 header p {
 	font-size: 26px;
-	text-align: center;
+	text-align: left;
 	margin: auto;
 	width: 90%
 }
